mType/tests/testFiles/interface/error/interfaceExtendsClass.mt
// Error test: Interface cannot extend a class
// This should throw an InheritanceException

class C {
}

interface D extends C {
}
